# halfguru

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: age.rs  ascii.rs  ascii.txt  github.rs  main.rs  stats.rs  svg.rs
