[package]
name = "halfguru"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
